feat: Implemented card pricing
